emptyDir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: count
spec:
  containers:
  # html generator
  - image: gasbugs/count
    name: html-generator
    volumeMounts:
    - mountPath: /var/htdocs
      name: html
  # web server
  - image: httpd
    name: web-server
    volumeMounts:
    - mountPath: /usr/local/apache2/htdocs
      name: html
      readOnly: true
  volumes:
  - name: html
    emptyDir: {}
