kubernetesDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
spec:
  strategy: # 업데이트 전략
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate # 롤링업데이트
  replicas: 10
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: alpine:3.4
        command: ['sh', '-c', 'sleep 3600']
