nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-go-np
spec:
  type: NodePort        # 반드시 써야 함
  selector:
    app: http-go        # 앞에서 생성한 서비스를 특정
  ports:
    - port: 80          # 서비스의 포트
      targetPort: 8080  # 포드(컨테이너)의 포트
      nodePort: 30001   # 노드 포트
