ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-go-ingress
spec:
  rules:
  - host: gasbugs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-go-np # 서비스 이름
          servicePort: 80 # 서비스의 포트
---
# http-go-deploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-go-np
spec:
  type: NodePort
  selector:
    app: http-go
  ports:
    - protocol: TCP
      port: 80 # 서비스의 포트
      targetPort: 8080 # 컨테이너의 포트

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-go
  template:
    metadata:
      labels:
        app: http-go
    spec:
      containers:
      - name: http-go
        image: gasbugs/http-go
        ports:
        - containerPort: 8080
